<resources>
    <string name="app_name">GithubUser</string>
    <string name="username">Username</string>
    <string name="search">Search Here</string>
    <string name="search_hint">Please input username</string>
    <string name="d_following">%d\nFollowing</string>
    <string name="d_follower">%d\nFollowers</string>
    <string name="name">Name</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="detail_user_title">Detail Github User</string>
    <string name="favorite">Favorite</string>
    <string name="change_theme">Change Theme</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tab_layout">Tab layout</string>
    <string name="favorite_user_title">Favorite User</string>
    <string name="theme_setting_title">Theme Setting</string>
    <string name="splash_screen">Splash Screen</string>
</resources>